Fixing button spacing issue

--- a/src/App.css
+++ b/src/App.css
@@ -1078,5 +1078,6 @@ span svg {
   .callButton {
     left: 14%;
     margin-top: 10px;
+    top: 71.5%;
   }
 }
